<resources>
    <string name="app_name">AAPNARSHOP</string>
    <string name="app_logo">logo description</string>
    <string name="text_settings">Settings</string>

    <string name="one">১</string>
    <string name="two">২</string>
    <string name="three">৩</string>
    <string name="four">৪</string>
    <string name="five">৫</string>
    <string name="six">৬</string>
    <string name="seven">৭</string>
    <string name="eight">৮</string>
    <string name="nine">৯</string>
    <string name="zero">০</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="ok_string_bn">ঠিক আছে</string>
    <string name="ok_string_en">Ok</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_string">No Internet Connection Available!</string>

    <string name="menu_home">Home</string>
    <string name="try_again_text">Please,Try Again!</string>

    <!--sign in and sign up page text-->
    <string name="text_welcome">Welcome</string>
    <string name="text_to">to</string>
    <string name="text_aapnershop">aapnershop!</string>
    <string name="hint_PhoneNumberOremail">Phone Number/Email</string>
    <string name="hint_Password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_confirm_Password">Confirm Password</string>
    <string name="string_signin">Sign In</string>
    <string name="string_signup">Sign Up</string>
    <string name="Or_signin_with">Or Sign in with</string>
    <string name="Or_signup_with">Or Sign up with</string>
    <string name="facebook_icon">icon description</string>
    <string name="google_icon">icon description</string>
    <string name="new_user_text">New User?</string>
    <string name="text_create_account">Create Account with Phone Number</string>
    <string name="text_signing_up">By signing up, you agree with the</string>
    <string name="text_signing_up_continued">and</string>
    <string name="text_terms_of_service">Terms of Service</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="username_error">Enter A Valid Phone/Email</string>
    <string name="username_error_phone">Enter A Valid Phone Number</string>
    <string name="username_error_email">Enter A Valid Email Address</string>
    <string name="password_error">Enter A Password</string>
    <string name="mandatory_error">Email/Phone Number is mandatory</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="failed_otp_text">Failed to send OTP, Please, try again</string>
    <string name="operation_failed_text">Operation Failed, Please try again.</string>
    <string name="link_fail_text">Can\'t open the link. Please, try again!</string>
    <string name="privacy_url">http://www.gentertainmentbd.club/privacy/</string>
    <string name="termsofservice_url">http://www.gentertainmentbd.club/who-we-are/</string>
    <string name="signup_successful_text">Account Created Successfully!</string>

    <!--nav bar text-->
    <string name="text_navbar_home">Dashboard</string>
    <string name="text_navbar_order">Order</string>
    <string name="text_navbar_notification">Notification</string>
    <string name="text_navbar_profile">Profile</string>
    <string name="text_navbar_logout">Logout</string>
    <string name="text_navbar_language">LANGUAGE</string>
    <string name="user_name">MD Rahamat Ullah</string>
    <string name="user_number">01856936666</string>
    <string name="cart">Cart</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Dashboard-->
    <string name="drawer_logo">drawer logo</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_location">Your Location</string>
    <string name="hint_search_dashboard">Search for Shop or Product</string>
    <string name="text_nearby_shop">Nearby Shop</string>
    <string name="text_opening_hour">OPENING HOUR </string>
    <string name="store_open_close_time">9.00AM-10.00PM</string>
    <string name="offer_text">OFFER</string>
    <string name="english_format">EN</string>
    <string name="bangla_format">BN</string>

    <!--Search Filter Dashboard -->
    <string name="text_search_rating">Rating</string>
    <string name="text_search_offer">Offer</string>
    <string name="text_search_apply">Apply</string>

    <!--Profile-->
    <string name="profile_name">Name</string>
    <string name="profile_mobile">Mobile</string>
    <string name="profile_city">City</string>
    <string name="profile_area_selection">Area Selection</string>
    <string name="profile_address">Address</string>
    <string name="profile_primary_address">Select As Primary Address</string>
    <string name="profile_buyer_address">Select Your Address</string>
    <string name="profile_save_button">Save</string>
    <string name="profile_apply_button">Apply</string>
    <string name="profile_update_button">Update</string>
    <string name="profile_address_mobile_no_text">Mobile: </string>
    <string name="address_text">Address</string>
    <string name="profile_email">Email</string>
    <string name="add_image_string">Choose your profile picture</string>
    <string name="update_profile_text">Update Profile</string>
    <string name="hint_phone">Number</string>
    <string name="update_validation_text">Enter Required Information</string>
    <string name="profile_update_confirm_text">Your profile has been updated</string>

    <!--Fragment Names-->
    <string name="notification_fragment">Notification Fragment</string>
    <string name="order_fragment">Order Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>

    <!-- ORDER -->
    <string name="order_details">Order Details</string>
    <string name="order_search_by_order_no_text">Search By Order No</string>
    <string name="text_order_cardview">Order #</string>
    <string name="text_order_details">Details</string>
    <string name="text_order_placed_on">Placed on  </string>
    <string name="text_delivered">Delivered</string>
    <string name="text_shop_name">Shop Name </string>
    <string name="text_write_review">Write Review</string>
    <string name="text_shipping_address">Shipping Address</string>
    <string name="text_total_summary">Total Summary</string>
    <string name="text_sub_total">Sub-total</string>
    <string name="text_delivery_charge">Delivery Charge</string>
    <string name="text_discount">Discount</string>
    <string name="text_order_total">Total</string>


    <!--Store Homepage-->
    <string name="minimum_buy_text">Minimum Buy</string>
    <string name="opening_hour_text">OPENING HOUR</string>
    <string name="store_search_item_hint_text">Search for item</string>
    <string name="average_delivery_time_text">Average Delivery Time</string>
    <string name="delivery_charge_text">Delivery Charge</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_cart_plus">+</string>
    <string name="add_to_cart_minus">-</string>
    <string name="add_to_cart_empty">0</string>

    <!--Cart-->
    <string name="cart_details_text">Details</string>
    <string name="cart_edit_text">Edit</string>
    <string name="cart_order_details_text">ORDER DETAILS</string>
    <string name="cart_order_summary_text">ORDER SUMMARY</string>
    <string name="cart_voucher_code_hint_text">Enter Voucher Code</string>
    <string name="cart_apply_button_text">APPLY</string>
    <string name="total_text">Total</string>
    <string name="cart_cash_on_delivery_text">CASH ON DELIVERY</string>
    <string name="cart_online_payment_text">ONLINE PAYMENT</string>
    <string name="cart_confirm_order_text">CONFIRM ORDER</string>

    <!--Edit/Add Address-->
    <string name="remove_text">Remove</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_address_select_area_text">Select Area</string>
    <string name="address_add_successful_text">Your Address has been Added</string>
    <string name="address_update_successful_text">Your Address has been Updated</string>
    <string name="delete_address_ask_text">Do you want to delete this Address?</string>

    <!--Change Password Settings-->
    <string name="current_text">Current</string>
    <string name="new_text">New</string>
    <string name="retype_new_text">Re-type New</string>
    <string name="change_password_text">Change Password</string>
    <string name="password_not_matched_text">New password do not match Retype-new password</string>
    <string name="validation_current_password_error_text">Enter your current password</string>
    <string name="validation_new_password_error_text">Enter new password</string>
    <string name="validation_renew_password_error_text">Re-type new password</string>

    <!--Rating Product-->
    <string name="product_quality">Product Quality</string>
    <string name="shop_delivery_service">Shop Delivery Service</string>
    <string name="shop_owner_behavior">Shop Owner Behavior</string>
    <string name="product_packaging">Product Packaging</string>
    <string name="rating_comment_text">Comment</string>
    <string name="rating_submit_text">Submit</string>
    <string name="rating_cancel_text">Cancel</string>
    <string name="rating_footer_message_1">Please, share your feedback about the product</string>
    <string name="rating_footer_message_2">How is the product. Did you like it?</string>
    <string name="rating_order_placed_on_text">Placed on </string>
    <string name="rating_order_text">Order #</string>

    <!--Product Details-->
    <string name="details_text">Details</string>

    <!--Notification-->
    <string name="visit_the_shop_text">Visit The Shop</string>

    <!--Forgot Password-->
    <string name="forgot_pass_text">Did you forgot your password?</string>
    <string name="validation_phone_text">Enter a valid Phone number</string>
    <string name="validation_email_text">Enter a valid Email address</string>
    <string name="validation_phoneandemail_text">Email/Phone Number is mandatory</string>
    <string name="forogot_pass_successful_text">Password Changed Successfully!</string>

    <!--OTP-->
    <string name="otp_pin_text">Enter Your OTP pin please.</string>

</resources>
